# Thunderstorm-Forcasting-with-MLFlow-Tracking

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/data/raw/: indices.csv  merged_df_all12.csv  surface.csv
data_copy/: indices data.csv
experiments/: experiments copy.ipynb  experiments.ipynb  merged_df_all12k_combined.csv  mlflow.db
experiments/mlruns/1/models/m-1562111ccba841e78e7855e312631710/artifacts/: MLmodel  conda.yaml  model.pkl
experiments/mlruns/1/models/m-cfcbb0b9a352422fbff01ed456a1f2f8/artifacts/: MLmodel  model.pkl  requirements.txt
experiments/mlruns/1/models/m-d7a0c6a78be347a3aa5e36781aec603c/artifacts/: MLmodel
